[workspace]
members = [
    "crates/cli",
    "crates/recon",
]

[workspace.package]
version = "1.3.1"
authors = ["Ervin Szilagyi"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/domain-recon/domain-recon-rs"
repository = "https://github.com/domain-recon/domain-recon-rs"
keywords = ["domain", "recon"]
description = "Extract domains and subdomains from certificates."
rust-version = "1.64.0"

[workspace.dependencies]
recon = { version = "1.3.1", path = "crates/recon" }
tokio = { version = "1.29.1" }
serde_json = { version = "1.0.104" }
serde = { version = "1.0.181" }
reqwest = { version = "0.11.18" }
futures = { version = "0.3.28" }
async-std-resolver = { version = "0.22.0" }
anyhow = { version = "1.0.72" }
console = { version = "0.15.7" }
addr = { version = "0.15.6" }
home = { version = "0.5.5" }
clap = {version = "4.3.19" }
csv = {version = "1.2.2"}

[profile.release]
strip = "symbols"
