[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/recon",
]

[workspace.package]
version = "1.3.2"
authors = ["Ervin Szilagyi"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/domain-recon/domain-recon-rs"
repository = "https://github.com/domain-recon/domain-recon-rs"
keywords = ["domain", "recon"]
description = "Extract domains and subdomains from certificates."
rust-version = "1.83.0"

[workspace.dependencies]
recon = { version = "1.3.2", path = "crates/recon" }
tokio = { version = "1.42.0" }
serde_json = { version = "1.0.133" }
serde = { version = "1.0.216" }
reqwest = { version = "0.11.27" }
futures = { version = "0.3.31" }
async-std-resolver = { version = "0.24.2" }
anyhow = { version = "1.0.94" }
console = { version = "0.15.10" }
addr = { version = "0.15.6" }
home = { version = "0.5.11" }
clap = {version = "4.5.23" }
csv = {version = "1.3.1"}

[profile.release]
strip = "symbols"
