[package]
name = "cli"
readme = "../../README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
recon.workspace = true
tokio = { version = "1.0.2", features = ["full"] }
clap = { version = "4.0.18", features = ["derive"] }
