[package]
name = "domain-recon"
readme = "../../README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
recon.workspace = true
clap = { version = "4.0.18", features = ["derive"] }
csv = "1.1.6"
tokio = { workspace = true, features = ["full"] }
