[package]
name = "domain-recon"
readme = "../../README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
recon.workspace = true
clap = { workspace = true, features = ["derive"] }
csv = { vworkspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
console = { workspace = true }
