[package]
name = "recon"
readme = "../../README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
futures = "0.3.24"
async-std-resolver = "0.22.0"
itertools = "0.10.5"
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
console = { workspace = true }
addr = "0.15.6"
home = "0.5.4"
