[package]
name = "recon"
readme = "../../README.md"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json", "native-tls-vendored"] }
futures = { workspace = true }
async-std-resolver = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
console = { workspace = true }
addr = { workspace = true }
home = { workspace = true }
clap = { version = "4.2.1" }
csv = { version = "1.2.1" }
